--- a/apps/auth-service/src/utils/email-templates/seller-activation.ejs
+++ b/apps/auth-service/src/utils/email-templates/seller-activation.ejs
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Ilan Reset Password</title>
+    <title>Ilan Seller Activation Email</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style type="text/css">
@@ -74,15 +74,15 @@
     <div class="email-wrapper">
     <!-- Header -->
     <div class="email-header">
-        <h1>Ilan Forgot Password</h1>
+        <h1>Ilan Seller Activation Email</h1>
     </div>
 
     <!-- Body -->
     <div class="email-body">
         <p>Dear <%= name %>,</p>
         <p>
-        We received a request to reset your password. Use the OTP code below to
-        reset it.
+        Thank you for registering with Ilan. To activate your account, please
+        use the following activation code:
         </p>
 
         <h2><%= otp %></h2>
@@ -92,7 +92,7 @@
         minutes.
         </p>
 
-        <p>If you did not request a password reset, please ignore this email.</p>
+        <p>If you did not create an account, no further action is required.</p>
 
         <p>
         Best regards,<br />
