--- a/apps/auth-service/src/utils/email-templates/user-activation-mail.ejs
+++ b/apps/auth-service/src/utils/email-templates/user-activation-mail.ejs
@@ -40,6 +40,7 @@
         border-radius: 8px;
         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
         overflow: hidden;
+        border-color: #333333;
     }
     .email-header {
         background-color: #0070f3;
